--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ __pycache__/
 *.so
 # bartek  - my gitignore
 test_page.py
-database_file/
+database_file/question.csv
 # Distribution / packaging
 .Python
 env/
